<resources>
    <string name="app_name">Art_Stationary</string>
    <string name="signin">Sign In</string>
    <string name="Tooltext">Tooltext</string>
    <string name="signup">Sign Up</string>
    <string name="addtocart">Add To Cart</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="quickly">Quickly</string>
    <string name="abcdeffhdkfgldkghdgppdig">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="donthaveacc">Dont have an account? <font fgcolor='#003399'>Sign up</font></string> <!--gray-->
    <string name="alreadyhaveacc">Already have an account? <font fgcolor='#003399'>Login</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummytext">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string> <!--gray-->


    <string name="prefuserid">ID</string>
    <string name="prefusername">USERNAME</string>
    <string name="prefpropertyid">_ID</string>
    <string name="preffriendid">F_ID</string>
    <string name="preftoken">TOKEN</string>
    <string name="prefemail">Email</string>
    <string name="prefDefaultValue">APP_DEFAULT</string>
    <string name="prefName">APP_PREFERENCE</string>
    <string name="enterValidEmail">Please Enter a Valid Email</string>
    <string name="prefProfileImage">PROFILE_IMAGE</string>
    <string name="global_currency">%1$s KWD</string>


    <string name="prefgoogleemail">GEmail</string>
    <string name="prefgoogleImage">GOOGLEPROFILE_IMAGE</string>
    <string name="prefgoogleid">GOOGLEID</string>
    <string name="prefgooglename">GOOGLENAME</string>

    <string name="preffbemail">FEmail</string>
    <string name="preffbImage">FPROFILE_IMAGE</string>
    <string name="preffbid">FID</string>
    <string name="preffbname">FNAME</string>


    <!--Navigation_dots-->

    <string name="getstarted">Get Started</string>


    <!--home Fragment-->
    <string name="newArrivals">New Arrivals</string>
    <string name="viewAll">View All</string>
    <string name="brands">Brands</string>
    <string name="offers">Offers</string>
    <string name="mostPopular">Most Popular</string>

    <!--langauge scree-->
    <string name="selectYourLangauage">Select your language</string>

    <!--Auth screens-->
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="enterEmail">Enter email</string>

    <!--myorder Card-->
    <string name="order">Order- </string>
    <string name="amount">Amount- </string>
    <string name="status">Status- </string>
    <string name="dateOrdered">Date ordered- </string>


    <!--profile Fragment-->
    <string name="myaddress">My Addresses</string>
    <string name="wishlist">Wishlist</string>
    <string name="ternandcond">Terms and Conditions</string>
    <string name="privacypolicy">Privacy policy</string>
    <string name="refundpolicy">Refund policy</string>
    <string name="language">Language</string>
    <string name="changepass">Change Password</string>
    <string name="contactus">Contact us</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>

    <!--cart Fragment-->
    <string name="totals">Totals</string>
    <string name="subtotal">Sub total</string>
    <string name="shipping">Shipping</string>
    <string name="checkout">Checkout</string>


    <string name="amounts">Amount-</string>
    <string name="dateordered">Date ordered-</string>
    <string name="statuss">Status- </string>
    <string name="noaddressadded">No added Address Found!! </string>
    <string name="addadress">Add Address </string>

    <!--Change Password-->
    <string name="currentPassword">Current Password</string>
    <string name="newPassword">New Password-</string>


    <!--Item Fragment-->
    <string name="selectQuantity">Select Quantity</string>
    <string name="selectColor">Select Colors</string>
    <string name="selectSize">Select Size</string>
    <string name="outOfStock">Out of Stock</string>
    <string name="description">Description</string>
    <string name="otherProducts">Related Products</string>

    <!--Errors/Message-->
    <string name="emptyFields">Field can\'t be empty</string>
    <string name="invalidEmail">Please enter a valid email address</string>


</resources>
