<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/basecard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/headcardbackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textprofile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/popinsbold"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guidelineright"
                app:layout_constraintStart_toStartOf="@id/guidelineleft"
                app:layout_constraintTop_toBottomOf="@id/guidelinetop" />

            <TextView
                android:id="@+id/textname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/popinsmedium"
                android:text=""
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintBottom_toBottomOf="@id/basecard"
                app:layout_constraintEnd_toEndOf="@id/guidelineright"
                app:layout_constraintStart_toStartOf="@id/guidelineleft" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineright"
                app:layout_constraintStart_toStartOf="@id/guidelineleft"
                app:layout_constraintTop_toBottomOf="@id/basecard">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardviewbackground">

                    <TextView
                        android:id="@+id/textmyorder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ordersicon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/getstarted"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textaddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/addressicon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/myaddress"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textmyorder" />

                    <TextView
                        android:id="@+id/textwishlist"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_wishlisht"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/wishlist"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textaddress" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewtwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineright"
                app:layout_constraintStart_toStartOf="@id/guidelineleft"
                app:layout_constraintTop_toBottomOf="@id/cardviewone">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardviewbackground">

                    <TextView
                        android:id="@+id/texttearmsandcondition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/tearmsicon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/ternandcond"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textprivacypolicy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/privacyicon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/privacypolicy"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/texttearmsandcondition" />


                    <TextView
                        android:id="@+id/textrefundpolicy"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/refundicon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/refundpolicy"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textprivacypolicy" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardviewthree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="@id/guidelineright"
                app:layout_constraintStart_toStartOf="@id/guidelineleft"
                app:layout_constraintTop_toBottomOf="@id/cardviewtwo">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cardviewbackground">

                    <TextView
                        android:id="@+id/textlanguage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/languageicon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/language"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textchangepassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/changepassicon"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/changepass"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textlanguage" />


                    <TextView
                        android:id="@+id/textcontactus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/contactus"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/contactus"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textchangepassword" />

                    <TextView
                        android:id="@+id/textLogOut"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/contactus"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:padding="10dp"
                        android:text="@string/logout"
                        android:textColor="@color/black"
                        android:textSize="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textcontactus" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelinetop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>