<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

    <ImageView
        android:id="@+id/iconhomelogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/homelogo"
        app:layout_constraintTop_toTopOf="@id/guidelinetop"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        app:layout_constraintEnd_toEndOf="@id/guidelineright" />

    <ImageView
        android:id="@+id/imagesearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="@id/guidelineright"
        app:layout_constraintTop_toTopOf="@id/guidelinetop"/>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        app:layout_constraintEnd_toEndOf="@id/guidelineright"
        app:layout_constraintTop_toBottomOf="@id/iconhomelogo"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/SliderDots"
        android:layout_below="@+id/viewPager"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        app:layout_constraintEnd_toEndOf="@id/guidelineright"
        app:layout_constraintTop_toBottomOf="@+id/viewPager"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/text_Newarrivals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newArrivals"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        android:textColor="@color/headingblack"
        android:textStyle="bold"
        android:textSize="20dp"
        android:fontFamily="@font/popinsmedium"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/SliderDots"/>

        <TextView
            android:id="@+id/text_viewall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewAll"
            app:layout_constraintEnd_toEndOf="@id/guidelineright"
            android:textColor="@color/headingblack"
            android:textStyle="bold"
            android:textSize="16dp"
            android:fontFamily="@font/popinsmedium"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/SliderDots"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gridlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        app:layout_constraintEnd_toEndOf="@id/guidelineright"
        app:layout_constraintTop_toBottomOf="@id/text_Newarrivals"/>

    <TextView
        android:id="@+id/text_brands"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brands"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        android:textColor="@color/headingblack"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/popinsmedium"
        app:layout_constraintTop_toBottomOf="@id/gridlist"/>

        <TextView
            android:id="@+id/text_viewallBrands"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewAll"
            app:layout_constraintEnd_toEndOf="@id/guidelineright"
            android:textColor="@color/headingblack"
            android:textStyle="bold"
            android:textSize="16dp"
            android:fontFamily="@font/popinsmedium"
            app:layout_constraintTop_toBottomOf="@id/text_brands"
            app:layout_constraintTop_toTopOf="@+id/text_brands"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/verticallist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        app:layout_constraintEnd_toEndOf="@id/guidelineright"
        app:layout_constraintTop_toBottomOf="@id/text_brands"/>

    <TextView
        android:id="@+id/text_Offers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offers"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        android:textColor="@color/headingblack"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/popinsmedium"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/verticallist"/>

        <TextView
            android:id="@+id/text_viewalloffers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewAll"
            app:layout_constraintEnd_toEndOf="@id/guidelineright"
            android:textColor="@color/headingblack"
            android:textStyle="bold"
            android:textSize="16dp"
            android:fontFamily="@font/popinsmedium"
            app:layout_constraintTop_toBottomOf="@id/text_Offers"
            app:layout_constraintTop_toTopOf="@+id/text_Offers"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Offerslist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        app:layout_constraintEnd_toEndOf="@id/guidelineright"
        app:layout_constraintTop_toBottomOf="@id/text_Offers"/>

    <TextView
        android:id="@+id/text_mostpopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostPopular"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        android:textColor="@color/headingblack"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/popinsmedium"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/Offerslist"/>

        <TextView
            android:id="@+id/text_viewallmostpopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewAll"
            app:layout_constraintEnd_toEndOf="@id/guidelineright"
            android:textColor="@color/headingblack"
            android:textStyle="bold"
            android:textSize="16dp"
            android:fontFamily="@font/popinsmedium"
            app:layout_constraintTop_toBottomOf="@id/text_mostpopular"
            app:layout_constraintTop_toTopOf="@+id/text_mostpopular"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mostpopularlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/guidelineleft"
        app:layout_constraintEnd_toEndOf="@id/guidelineright"
        app:layout_constraintTop_toBottomOf="@id/text_mostpopular"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinetop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>